{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 586,
  "lineage": "c345a6e9-eaaa-b09d-8461-1660ee17d6c7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aff66d597807bb62",
            "domain": "vpc",
            "id": "eipalloc-0aff66d597807bb62",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-54-84-176-242.compute-1.amazonaws.com",
            "public_ip": "54.84.176.242",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "demoinstanceone",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:304657531734:instance/i-00231639d5059afd6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00231639d5059afd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01fbc823756f06e22",
            "private_dns": "ip-10-0-1-54.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.54",
            "public_ip": "18.207.163.12",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0db9456f36e9f4478",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099bd01241dad8dde",
            "tags": {
              "Name": "My Public Instance"
            },
            "tags_all": {
              "Name": "My Public Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d32fe2a6481b49d"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc1_security_group",
            "aws_subnet.vpc1_subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:304657531734:instance/i-0792739f830da4755",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0792739f830da4755",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f38e9cd6d30db6eb",
            "private_dns": "ip-10-0-2-62.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00c12eab24834f647",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee3e87025cbda35d",
            "tags": {
              "Name": "ec2-instance-1"
            },
            "tags_all": {
              "Name": "ec2-instance-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d32fe2a6481b49d"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc1_security_group",
            "aws_subnet.vpc1_subnet2",
            "aws_vpc.vpc1"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:304657531734:instance/i-01de645456a0cb43e",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01de645456a0cb43e",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d21aea3ae00a4ae0",
            "private_dns": "ip-10-0-2-245.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.245",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05abfbe3b4a8aadea",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ee3e87025cbda35d",
            "tags": {
              "Name": "ec2-instance-2"
            },
            "tags_all": {
              "Name": "ec2-instance-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d32fe2a6481b49d"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc1_security_group",
            "aws_subnet.vpc1_subnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:304657531734:instance/i-0789840114894d200",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0789840114894d200",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b4eb5306644f0217",
            "private_dns": "ip-192-168-2-168.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.168",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d716e35fc03edbba",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d4bc0ed23fcf571",
            "tags": {
              "Name": "ec2-instance2.0-1"
            },
            "tags_all": {
              "Name": "ec2-instance2.0-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029f819d6652a808b"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc2_security_group",
            "aws_subnet.vpc2_subnet2",
            "aws_vpc.vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:304657531734:instance/i-07ce893219e5ff4ab",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07ce893219e5ff4ab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f0b125618db98518",
            "private_dns": "ip-192-168-2-253.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.253",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfbf3091d8168eda",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-03d4bc0ed23fcf571",
            "tags": {
              "Name": "ec2-instance2.0-2"
            },
            "tags_all": {
              "Name": "ec2-instance2.0-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029f819d6652a808b"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc2_security_group",
            "aws_subnet.vpc2_subnet2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "publicforvpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:304657531734:instance/i-0b28a675ea6a24b20",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b28a675ea6a24b20",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-08d7f6d451e5bec3a",
            "private_dns": "ip-192-168-1-120.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.120",
            "public_ip": "3.84.207.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-08d7526da643f1892",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-025eb819f86a265ff",
            "tags": {
              "Name": "My Public Instance2"
            },
            "tags_all": {
              "Name": "My Public Instance2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029f819d6652a808b"
            ]
          },
          "dependencies": [
            "aws_security_group.vpc2_security_group",
            "aws_subnet.vpc2_subnet1",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demogateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:internet-gateway/igw-00730213d74d2a618",
            "id": "igw-00730213d74d2a618",
            "owner_id": "304657531734",
            "tags": {
              "Name": "igw1"
            },
            "tags_all": {
              "Name": "igw1"
            },
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demogateway2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:internet-gateway/igw-0f8257ac0c6dee2a5",
            "id": "igw-0f8257ac0c6dee2a5",
            "owner_id": "304657531734",
            "tags": {
              "Name": "igw2"
            },
            "tags_all": {
              "Name": "igw2"
            },
            "vpc_id": "vpc-06f945df7d9d95a16"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 0,
          "attributes": {
            "desync_mitigation_mode": "defensive",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:304657531734:loadbalancer/app/External-LB/c35a85b834e0dc72",
            "idle_timeout": 60,
            "internal": false,
            "load_balancer_type": "application",
            "name": "External-LB",
            "preserve_host_header": false,
            "security_groups": [
              "sg-029f819d6652a808b"
            ],
            "subnets": [
              "subnet-025eb819f86a265ff",
              "subnet-03d4bc0ed23fcf571"
            ],
            "xff_header_processing_mode": "append"
          },
          "dependencies": [
            "aws_security_group.vpc2_security_group",
            "aws_subnet.vpc2_subnet1",
            "aws_subnet.vpc2_subnet2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:304657531734:targetgroup/ALB-TG/276083eb220fc33f",
            "arn_suffix": "targetgroup/ALB-TG/276083eb220fc33f",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:304657531734:targetgroup/ALB-TG/276083eb220fc33f",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-06f945df7d9d95a16"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:304657531734:targetgroup/ALB-TG/276083eb220fc33f-2023041111313035730000000c",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:304657531734:targetgroup/ALB-TG/276083eb220fc33f",
            "target_id": "i-0789840114894d200"
          },
          "dependencies": [
            "aws_instance.ec2_instance2",
            "aws_lb_target_group.target-elb",
            "aws_security_group.vpc2_security_group",
            "aws_subnet.vpc2_subnet2",
            "aws_vpc.vpc2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:304657531734:targetgroup/ALB-TG/276083eb220fc33f-2023041111312995240000000b",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:304657531734:targetgroup/ALB-TG/276083eb220fc33f",
            "target_id": "i-07ce893219e5ff4ab"
          },
          "dependencies": [
            "aws_instance.ec2_instance2",
            "aws_lb_target_group.target-elb",
            "aws_security_group.vpc2_security_group",
            "aws_subnet.vpc2_subnet2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0aff66d597807bb62",
            "connectivity_type": "public",
            "id": "nat-051cd4559efe8e037",
            "network_interface_id": "eni-0a91ee3c54631e7ca",
            "private_ip": "10.0.1.13",
            "public_ip": "54.84.176.242",
            "subnet_id": "subnet-099bd01241dad8dde"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_subnet.vpc1_subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc1_to_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "192.168.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0409d8c5d0e667867393179072",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0409d8c5d0e667867",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0175ac11e6e3b3c8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.vpc1_subnet1",
            "aws_vpc.vpc1",
            "aws_vpc.vpc2",
            "aws_vpc_peering_connection.vpc1_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "vpc2_to_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "10.0.0.0/16",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0e3c1fa1445f519d2179966490",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0e3c1fa1445f519d2",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": "pcx-0175ac11e6e3b3c8a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_route_table.private2",
            "aws_vpc.vpc1",
            "aws_vpc.vpc2",
            "aws_vpc_peering_connection.vpc1_vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:route-table/rtb-0409d8c5d0e667867",
            "id": "rtb-0409d8c5d0e667867",
            "owner_id": "304657531734",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-051cd4559efe8e037",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private route"
            },
            "tags_all": {
              "Name": "private route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_subnet.vpc1_subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:route-table/rtb-0e3c1fa1445f519d2",
            "id": "rtb-0e3c1fa1445f519d2",
            "owner_id": "304657531734",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private route2"
            },
            "tags_all": {
              "Name": "private route2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f945df7d9d95a16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:route-table/rtb-093a699a7297a811c",
            "id": "rtb-093a699a7297a811c",
            "owner_id": "304657531734",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00730213d74d2a618",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route"
            },
            "tags_all": {
              "Name": "public route"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:route-table/rtb-064436699fabc01c0",
            "id": "rtb-064436699fabc01c0",
            "owner_id": "304657531734",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f8257ac0c6dee2a5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public route2"
            },
            "tags_all": {
              "Name": "public route2"
            },
            "timeouts": null,
            "vpc_id": "vpc-06f945df7d9d95a16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.demogateway2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0afd1cc7cf3006dd6",
            "route_table_id": "rtb-093a699a7297a811c",
            "subnet_id": "subnet-099bd01241dad8dde"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway",
            "aws_route_table.public",
            "aws_subnet.vpc1_subnet1",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a20ce76fa0fc8987",
            "route_table_id": "rtb-0409d8c5d0e667867",
            "subnet_id": "subnet-0ee3e87025cbda35d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.vpc1_subnet1",
            "aws_subnet.vpc1_subnet2",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-019d45519114a80c7",
            "route_table_id": "rtb-0409d8c5d0e667867",
            "subnet_id": "subnet-0c32bc21c3766082d"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.vpc1_subnet1",
            "aws_subnet.vpc1_subnet3",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05fb18c2b80c2c214",
            "route_table_id": "rtb-0409d8c5d0e667867",
            "subnet_id": "subnet-01b51883d860d6ce9"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.vpc1_subnet1",
            "aws_subnet.vpc1_subnet4",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt5",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095d20f6070fff363",
            "route_table_id": "rtb-0e3c1fa1445f519d2",
            "subnet_id": "subnet-03d4bc0ed23fcf571"
          },
          "dependencies": [
            "aws_route_table.private2",
            "aws_subnet.vpc2_subnet2",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ab292e8dde8b722",
            "route_table_id": "rtb-0e3c1fa1445f519d2",
            "subnet_id": "subnet-0da7f0aa15454ffaa"
          },
          "dependencies": [
            "aws_route_table.private2",
            "aws_subnet.vpc2_subnet3",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt7",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b1d4fdf6118af270",
            "route_table_id": "rtb-064436699fabc01c0",
            "subnet_id": "subnet-025eb819f86a265ff"
          },
          "dependencies": [
            "aws_internet_gateway.demogateway2",
            "aws_route_table.public2",
            "aws_subnet.vpc2_subnet1",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:security-group/sg-037b7dcef308c8bc4",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-037b7dcef308c8bc4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06d32fe2a6481b49d"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "Database-SG",
            "name_prefix": "",
            "owner_id": "304657531734",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.vpc1_security_group",
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc1_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:security-group/sg-06d32fe2a6481b49d",
            "description": "This is my security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d32fe2a6481b49d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-security-group120230411113034634600000001",
            "name_prefix": "my-security-group1",
            "owner_id": "304657531734",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc2_security_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:security-group/sg-029f819d6652a808b",
            "description": "This is my security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029f819d6652a808b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "my-security-group220230411113036817800000002",
            "name_prefix": "my-security-group2",
            "owner_id": "304657531734",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-06f945df7d9d95a16"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc1_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:subnet/subnet-099bd01241dad8dde",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099bd01241dad8dde",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304657531734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_web"
            },
            "tags_all": {
              "Name": "pub_web"
            },
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc1_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:subnet/subnet-0ee3e87025cbda35d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ee3e87025cbda35d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304657531734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_web"
            },
            "tags_all": {
              "Name": "pri_web"
            },
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc1_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:subnet/subnet-0c32bc21c3766082d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c32bc21c3766082d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304657531734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_DB1"
            },
            "tags_all": {
              "Name": "pri_DB1"
            },
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc1_subnet4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:subnet/subnet-01b51883d860d6ce9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b51883d860d6ce9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304657531734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_DB2"
            },
            "tags_all": {
              "Name": "pri_DB2"
            },
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "dependencies": [
            "aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc2_subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:subnet/subnet-025eb819f86a265ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-025eb819f86a265ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304657531734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pub_ALB"
            },
            "tags_all": {
              "Name": "pub_ALB"
            },
            "vpc_id": "vpc-06f945df7d9d95a16"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc2_subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:subnet/subnet-03d4bc0ed23fcf571",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03d4bc0ed23fcf571",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304657531734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_ASG"
            },
            "tags_all": {
              "Name": "pri_ASG"
            },
            "vpc_id": "vpc-06f945df7d9d95a16"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "vpc2_subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:subnet/subnet-0da7f0aa15454ffaa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da7f0aa15454ffaa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "304657531734",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pri_ASG"
            },
            "tags_all": {
              "Name": "pri_ASG"
            },
            "vpc_id": "vpc-06f945df7d9d95a16"
          },
          "dependencies": [
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:vpc/vpc-0b52ebdc366bb7772",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-080413e51639ce00d",
            "default_route_table_id": "rtb-09a67996d48ff23e5",
            "default_security_group_id": "sg-0b4fb4cf79f220462",
            "dhcp_options_id": "dopt-0dd110daaa69609e6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b52ebdc366bb7772",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09a67996d48ff23e5",
            "owner_id": "304657531734",
            "tags": {
              "Name": "alpha"
            },
            "tags_all": {
              "Name": "alpha"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:304657531734:vpc/vpc-06f945df7d9d95a16",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-06d3c617999159039",
            "default_route_table_id": "rtb-07bcb97a0fe02f6a0",
            "default_security_group_id": "sg-0d4611be5d3eba3a5",
            "dhcp_options_id": "dopt-0dd110daaa69609e6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-06f945df7d9d95a16",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-07bcb97a0fe02f6a0",
            "owner_id": "304657531734",
            "tags": {
              "Name": "beta"
            },
            "tags_all": {
              "Name": "beta"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peering_connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0175ac11e6e3b3c8a",
            "peer_owner_id": "304657531734",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-06f945df7d9d95a16",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "vpc1_vpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-0175ac11e6e3b3c8a",
            "peer_owner_id": "304657531734",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-06f945df7d9d95a16",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0b52ebdc366bb7772"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "aws_vpc.vpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection_accepter",
      "name": "vpc2_vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "id": "pcx-0175ac11e6e3b3c8a",
            "peer_owner_id": "304657531734",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-06f945df7d9d95a16",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "vpc_id": "vpc-0b52ebdc366bb7772",
            "vpc_peering_connection_id": "pcx-0175ac11e6e3b3c8a"
          },
          "dependencies": [
            "aws_vpc.vpc1",
            "aws_vpc.vpc2",
            "aws_vpc_peering_connection.vpc1_vpc2"
          ]
        }
      ]
    }
  ]
}